--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <section>
 
     </section>
-
+    
     <section>
-        
+        <img src="./images/3.jpeg" alt="">
     </section>
 
     <footer>
